--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
         "phpmailer/phpmailer": "~6.0",
         "leafo/scssphp": "^0.7",
         "matthiasmullie/minify": "^1.3",
-        "firebase/php-jwt": "^5.0"
+        "firebase/php-jwt": "^5.0",
+        "ext-openssl": "*",
+        "ext-spltype": "*"
     },
     "repositories": [
         {
